--- a/livedatatest/src/main/res/values/strings.xml
+++ b/livedatatest/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">LiveDataTest</string>
     <string name="todo">TODO</string>
+    <string name="dismiss">dismiss</string>
+    <string name="show">show</string>
 </resources>
