--- a/demo_navigation/src/main/res/values/strings.xml
+++ b/demo_navigation/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">dmo_navigation</string>
+    <string name="app_name">demo_navigation</string>
     <string name="detail">Detail</string>
     <string name="home">Home</string>
 </resources>
