--- a/demo_navigation/src/main/res/values/strings.xml
+++ b/demo_navigation/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">demo_navigation</string>
     <string name="detail">Detail</string>
     <string name="home">Home</string>
+    <string name="hint_args">输入要传递的参数</string>
 </resources>
