finish Room demo

--- a/demo_room/src/main/res/values/strings.xml
+++ b/demo_room/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Demo Room</string>
+    <string name="delete">delete</string>
+    <string name="insert">insert</string>
 </resources>
